# open_trader

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Makefile  README.md  README.zh-CN.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  task-4-report.md  纪律.md
.superpowers/sdd/: acceptance-fail-fix-report.md  final-fix-report.md  final-review-fix-report.md  task-3-report.md  (+5 more)
config/: daily_premarket.env.example  tiger_long_term_strategy.json
docs/: monthly_portfolio_import.md
scripts/: install_daily_premarket_launchd.sh  uninstall_daily_premarket_launchd.sh
tests/: conftest.py  test_a_share_trend.py  test_a_share_trend_watch.py  test_action_watch_cli.py  test_advice_models.py  test_advice_portfolio_loader.py  test_advice_store.py  test_akshare_quote.py  test_backtest.py  test_backtest_cli.py  test_backtest_prices.py  test_change_classifier.py  test_csv_io.py  test_daily_premarket.py  test_dashboard.py  test_dashboard_acceptance.py  test_dashboard_account_sync.py  test_dashboard_cli.py  test_dashboard_quotes.py  test_dashboard_web.py  test_decision_facts.py  test_decision_plan.py  test_decision_plan_generation.py  test_decision_plan_watch.py  test_decision_source_availability.py  test_drawdown_preflight.py  test_eastmoney_parser.py  test_futu_account.py  test_futu_account_cli.py  test_futu_quote.py  test_futu_skill_facts.py  test_futu_universe.py  test_futu_watch.py  test_futu_watch_cli.py  test_fx.py  test_kelly_lab.py  test_kelly_lifecycle.py  test_kelly_order_execution.py  test_kelly_order_execution_cli.py  test_kelly_order_intents.py  (+64 more)
(+303 files in other folders)
