[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "open-trader"
version = "0.1.0"
description = "Monthly portfolio aggregation and trading analysis tools"
requires-python = ">=3.12"
dependencies = [
    "futu-api",
    "openai>=2.0.0",
    "pdfplumber>=0.11.9",
    "tigeropen",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
open-trader = "open_trader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_trader = ["dashboard_static/*.html", "dashboard_static/*.css", "dashboard_static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
